@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-17
+2014-06-17 David Schneider
+- update documentation about storing epics.
+
 Tag: V00-01-16
 2014-06-16 David Schneider
 - switch from using stamp to event tag for deciding when to write
